<resources>
    <string name="app_name">My Local Info</string>
    <!--Activities-->
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>
    <!--Date templates-->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <!--Details Activity values-->
    <string name="day">Wednesday</string>
    <string name="date">2015–10-05 09:30:00</string>
    <string name="city_name">City</string>
    <!--Temperature-->
    <string name="high_temp"> °C</string>
    <string name="low_temp"> °C</string>
    <!--Humidity-->
    <string name="humidity_desc">Humidity: </string>
    <string name="humidity_val"> %</string>
    <!--Pressure-->
    <string name="pressure_desc">Pressure: </string>
    <string name="pressure_val"> hPa</string>
    <!--Wind-->
    <string name="wind_speed" />
    <string name="wind_deg" />
    <string name="wind_desc">Wind: </string>
    <string name="wind_val"> km/h E</string>
    <!--Description-->
    <string name="description">\Rain</string>
    <!--Image-->
    <string name="image_desc">Image</string>
    <!--Main Activity values-->
    <string name="latitude" />
    <string name="longitude" />
    <string name="latitude_short">Lat: </string>
    <string name="longitude_short">Long: </string>
    <string name="geo_coord" />
    <!--Settings Activity values-->
    <string name="settings_header_location">Location preferences</string>
    <string name="settings_summary_location">Get weather forecast for your actual location.</string>
    <string name="settings_location">Location</string>
    <string name="settings_location_city_header">Change city</string>
    <string name="settings_location_city_summary">Currently: %s</string>
    <!--Settings Activity values - OLD-->
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="weatherNotifications">Weather Notifications</string>
    <string name="time_format_title">Local Time Format</string>
    <string name="time_format_24h">24 Hour Clock</string>
    <string name="time_format_12h">AM / PM</string>
    <!--Sharing intent-->
    <string name="share_message_subject">Weather forecast, %s</string>
    <string name="share_message_choose" />
    <!--If something goes wrong-->
    <string name="description_not_available">Description is not available</string>
    <string name="error_function_not_available">Function is not already available.</string>
    <string name="error_download_data">Error caused when trying to download data!</string>
    <string name="error_again_message">Try again</string>
    <!-- Language of phone-->
    <string name="lang">en</string>
    <!--Action bar values-->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map location</string>
    <!--SettingsActivity values-->
    <string name="pref_location_default" translatable="false">Nairobi</string>
    <string name="pref_location_key" translatable="false">settings_edit_city_name</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to show the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'My Local Info\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="show_my_location">My Location</string>
    <string name="show_my_weather">My Location Weather</string>
    <string name="get_started">Check My Location</string>
    <string name="app_main_text">Find your local and weather information using Local Info App</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDgfdp6L9-QDc3vcfUn4dZfTrnRVCtRyiQ</string>
    <string name="my_current_location_text">My current location</string>
    <string name="search_location">Search Location</string>
    <string name="search">Search</string>
    <string name="show_menu_weather">Weather</string>
    <string name="manage_account_text">Manage Account</string>
    <string name="activity_show_map">Show Map/ Location</string>
    <string name="activity_show_weather">Weather</string>
    <string name="activity_logout">Logout</string>
    <string name="enable_gps_msg">Please enable GPS to see your location</string>
    <string name="no_location_found_msg">No location found named </string>
    <string name="logout_text">Logout option clicked</string>
    <string name="menu_logout">Logout</string>
    <string name="no_data_text">No data</string>
    <string name="weather_image">Weather Image</string>
    <string name="station_name_text">Station Name</string>
    <string name="temperature_text">Temperature</string>
    <string name="wind_direction_text">Wind Direction</string>
    <string name="humidity_text">Humidity</string>
    <string name="cloud_cover_text">Cloud Cover</string>
    <string name="country_name_text">Location Name</string>
    <string name="wind_speed_text">Wind Speed</string>
    <string name="activity_home">Home</string>
    <string name="country_code_text">Country Code</string>

</resources>